# batteryinfo-py

./: .gitignore  Cargo.toml  README.md  batteryinfo.pyi  pyproject.toml
src/: battery.rs  enums.rs  lib.rs  measurement.rs
