[package]
name = "batteryinfo-py"
version = "0.1.4"
edition = "2024"
description = "A Python module written in rust for battery information"
authors = ["Dave Johnson <dave@thisdavej.com>"]
license = "MIT"
repository = "https://github.com/thisdavej/batteryinfo-py"
readme = "README.md"
keywords = ["python", "module", "battery", "information"]

[lib]
name = "batteryinfo"
crate-type = ["cdylib"]

[dependencies]
battery = "0.7.8"
human-time = "0.1.6"
pyo3 = { version = "0.24.0", features = ["extension-module", "generate-import-lib", "abi3-py310"] }
serde_json = "1.0.140"
