[build-system]
requires = ["maturin>=1.8"]
build-backend = "maturin"

[project]
name = "batteryinfo"
version = "0.1.3"
description = "A Python module written in rust for battery information"
authors = [{ name = "Dave Johnson", email = "thisdavej@gmail.com" }]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[project.urls]
"Homepage" = "https://github.com/thisdavej/batteryinfo-py"

[tool.maturin]
bindings = "pyo3"
include = ["batteryinfo/batteryinfo.pyi", "batteryinfo/py.typed"]
